syntax = "proto3";
package network;


service FileManager {
    // Sends a greeting
    rpc Create  (CreateRequest)  returns (Void) {}
    rpc Write   (WriteRequest)   returns (Void) {}
    rpc Remove  (RemoveRequest)  returns (Void) {}
    rpc Mkdir   (MkdirRequest)   returns (Void) {}
    rpc Rename  (RenameRequest)  returns (Void) {}
    rpc Link    (LinkRequest)    returns (Void) {}
    rpc Symlink (SymlinkRequest) returns (Void) {}
    rpc Setattr (SetattrRequest) returns (Void) {}
}

message Void {}

message LockRequest {
    string path = 1;
}
message LockResponse {
    bool result = 1;
}

// Create
message CreateRequest {
    string path   = 1;
    string name   = 2;
    uint32 mode   = 3;
}

// Remove
message RemoveRequest {
    string path = 1;
    string name = 2;
}

// Rename
message RenameRequest {
    string path       = 1;
    string oldname    = 2;
    string newname    = 3;
    string newdirpath = 4;
}

// Mkdir
message MkdirRequest {
    string path       = 1;
    string name       = 2;
    uint32 mode       = 3;
}

// Write
message WriteRequest {
    string path  = 1;
    bytes data   = 2;
    int64 offset = 3;
}

// Link
message LinkRequest {
    string path  = 1;
    string newname   = 2;
    string old = 3;
}

// Symlink
message SymlinkRequest {
    string path = 1;
    string target = 2;
    string newname =  3;
}

// Setattr
message SetattrRequest {
    string path = 1;
    uint32 mode = 2;
    int64  atime = 3;
    int64  mtime = 4;
}
